# ismr24

./: README.md
c5_2_60_description/urdf/: c5_2_60.xacro
ignition_gazebo_us_system/: CMakeLists.txt  package.xml
ignition_gazebo_us_system/config/: config-ismr.xml
ignition_gazebo_us_system/include/us_system/: us_system.hpp
ignition_gazebo_us_system/src/: us_system.cpp
rrmc/src/: rrmc.cpp
ur5_us_bringup/config/: initial_positions.yaml
ur5_us_bringup/launch/: ismr_ur_bringup.launch.py  rsp_ur_bringup.launch.py
ur5_us_bringup/models/gel_block/: #model.sdf#
ur5_us_bringup/rviz/: ur_us.rviz
ur5_us_bringup/urdf/: ur5_us.urdf.xacro
ur5_us_bringup/worlds/: ismr.sdf  rsp.sdf
ur_description/config/ur5e/: visual_parameters.yaml
ur_description/meshes/ur5e/visual/: base.stl  forearm.stl  shoulder.stl  upperarm.stl  wrist1.stl  wrist2.stl  wrist3.stl
ur_description/urdf/inc/: ur_common.xacro
